2011-12-21  Holger Vogt
  * src/misc/string.c ,
    src/frontend/inpcom.c ,
    src/include/ngspice/stringutil.h:
    allow syntax Gxxx n1 n2 TABLE {expression} = (x0, y0) (x1, y1) (x2, y2)
    or           Exxx n1 n2 TABLE {expression} = (x0, y0) (x1, y1) (x2, y2)

2011-12-17  Robert Larice
 * src/xspice/cmpp/ifs_lex.l ,
 * src/xspice/cmpp/ifs_yacc.y ,
 * src/xspice/cmpp/ifs_yacc_y.h ,
 * src/xspice/cmpp/mod_lex.l ,
 * src/xspice/cmpp/mod_yacc.y ,
 * src/xspice/cmpp/mod_yacc_y.h :
  remove CVS `Id',`log' etc. keyword incantations

2011-12-17  Robert Larice
 * src/winmain.c ,
 * src/frontend/inpcom.c ,
 * src/include/ngspice/Makefile.am ,
 * src/include/ngspice/memory.h ,
 * src/misc/Makefile.am ,
 * src/misc/string.c ,
 * visualc/vngspice.vcproj :

 Added      src/include/ngspice/stringutil.h
 Removed    src/misc/stringutil.h

   move stringutil.h --> src/include/ngspice

2011-12-17  Holger Vogt
 * src/frontend/inpcom.c :
  allow syntax Gxxx n1 n2 value={equation} or Exxx n1 n2 value={equation}

2011-12-17  Robert Larice
 * src/spicelib/devices/dev.c ,
 * src/spicelib/devices/adms/admst/ngspice.xml :
  adms3, use -ldl instead of -lltdl, fix include path

2011-12-17  Robert Larice
 * src/frontend/breakp2.c ,
 * src/frontend/outitf.c ,
 * src/include/ngspice/ftedefs.h ,
 * src/spicelib/analysis/cktsens.c :
  type fixes

2011-12-17  Holger Vogt
 * src/frontend/inp.c,
   src/frontend/options.c
   src/include/ngspice/fteext.h :
   variable ft_stricterror to exit ngspice with exit code 1
   if any error occurs during circuit parsing.
   Usage maybe extended to other errors.
   Tradditionally ngspice uses to continue, issue error messages,
   deliver wrong results and exit with exit code 0.

2011-12-16  Holger Vogt
 * src/frontend/subckt.c: beautify code

2011-12-15  Robert Larice
 * configure.ac ,
 * src/frontend/inpcom.c ,
 * src/frontend/subckt.c ,
 * src/include/ngspice/devdefs.h ,
 * src/include/ngspice/ngspice.h ,
 * src/spicelib/devices/dev.c ,